@startuml ClassDiagramComplessivo

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam classFontSize 11
skinparam classBackgroundColor #F8F9FA
skinparam classBorderColor #0052A3
skinparam classHeaderBackgroundColor #0052A3
skinparam classHeaderFontColor #FFFFFF
skinparam arrowColor #333333
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 80

class Cittadino {
  + _id : ObjectId
  + nome : String
  + cognome : String
  + dataNascita : Date
  + comuneResidenza : String
  + circoscrizione : String
  + ID_univoco_esterno : String <<unique>>
  + genere : String <<enum: Uomo, Donna>>
  + categoria : String <<enum>>
  + email : String <<unique>>
  + loggedIn : Boolean
  + profiloCompleto : Boolean
}

class Operatore {
  + _id : ObjectId
  + username : String <<unique>>
  + password : String <<bcrypt>>
  + nome : String
  + cognome : String
  + isRoot : Boolean
  --
  + matchPassword(pwd) : Boolean
}

class CategoriaIniziativa {
  + _id : ObjectId
  + nome : String <<unique>>
}

class Iniziativa {
  + _id : ObjectId
  + titolo : String <<unique>>
  + descrizione : String
  + stato : String <<enum: in_attesa, approvata, rifiutata>>
  + motivazione_moderazione : String
  + createdAt : Date
  + updatedAt : Date
}

class VotoIniziativa {
  + _id : ObjectId
  + createdAt : Date
  + updatedAt : Date
}

class Consultazione {
  + _id : ObjectId
  + tipo : String <<enum: votazione, sondaggio>>
  + stato : String <<enum: bozza, attivo, concluso, archiviato>>
  + titolo : String <<unique>>
  + descrizione : String
  + data_inizio : Date
  + data_fine : Date
  + data_discussione : Date
  + createdAt : Date
  + updatedAt : Date
}

class Domanda {
  + _id : ObjectId
  + titolo : String
  + tipo : String <<enum: risposta_singola, risposta_multipla>>
  + createdAt : Date
  + updatedAt : Date
}

class Opzione {
  + _id : ObjectId
  + testo : String
}

class RispostaConsultazione {
  + _id : ObjectId
  + tipo_consultazione : String <<enum: votazione, sondaggio>>
  + createdAt : Date
  + updatedAt : Date
}

class DettaglioRisposta {
  + ID_domanda : ObjectId
  + opzioniScelte : ObjectId[]
}

' ─── Relazioni ──────────────────────────────────────────────────────────────

Cittadino "1" --o{ "0..*" Iniziativa : propone >
Cittadino "1" --o{ "0..*" VotoIniziativa : esprime >
Cittadino "1" --o{ "0..*" RispostaConsultazione : risponde >

Operatore "1" --o{ "0..*" Consultazione : crea >

CategoriaIniziativa "1" --o{ "0..*" Iniziativa : classifica >

Iniziativa "1" --o{ "0..*" VotoIniziativa : riceve >

Consultazione "1" --o{ "0..*" RispostaConsultazione : raccoglie >
Consultazione "0..*" }o-- "0..1" Domanda : (votazione) usa >
Consultazione "0..*" }o--o{ "1..*" Domanda : (sondaggio) usa >

Domanda "1" *-- "2..*" Opzione : contiene >

RispostaConsultazione "1" *-- "0..*" DettaglioRisposta : (sondaggio) dettagli >

note bottom of Consultazione
  ID_domanda (solo votazione) e
  ID_domande[] (solo sondaggio)
  sono mutuamente esclusivi
end note

note bottom of VotoIniziativa
  Indice univoco:
  (ID_cittadino, ID_iniziativa)
end note

note bottom of RispostaConsultazione
  Indice univoco:
  (ID_cittadino, ID_consultazione)
end note

@enduml
